fixed spacing in destination-meta

--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -475,6 +475,7 @@ body {
 
   .destination-meta {
     flex-direction: row;
+    justify-content: space-evenly;
   }
 }
 
