--- a/styles/sass/layout/_destination.scss
+++ b/styles/sass/layout/_destination.scss
@@ -40,5 +40,6 @@
 
     .destination-meta {
         flex-direction: row;
+        justify-content: space-evenly;
     }
 }
